# kwui

./: .gitignore  .gitmodules  BUG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeSettings.json_deprecated  Cargo.toml  LICENSE  README.md  TODO.md  TODO.txt  anon_box.html  box_sizing.html  box_sizing.js  button_layout.html  button_layout.js  css-color-name.csv  cycle_width.html  fit.html  fit.js  mock.html  mock.js  overflow.html  overflow.js  overflow2.html  overflow3.html  pseudo_class.js  scroll_relative.html  scroll_relative.js  test.js  text_layout.html  text_layout.js  text_style.js  util.cmake
android/: .gitignore  settings.gradle
android/gradle/: libs.versions.toml
android/kwui/: build.gradle
cmake/: AndroidPackaging-Prerequisites.cmake  AndroidPackaging.cmake
cmake/AndroidPackaging.template/: .cmakeconfigure  .gitignore  CMakeLists.txt.in  build.gradle  build.gradle.in  gradle.properties.in  local.properties.in  settings.gradle  settings.gradle.in
examples/: CMakeLists.txt
examples/functional_component/: CMakeLists.txt  func_comp_main.cpp
examples/gallery/: CMakeLists.txt  gallery_main.cpp
examples/native/: CMakeLists.txt  (+1 more)
kwui-sys/: Cargo.toml  build.rs
rust/: Cargo.toml
scripts/: css-color-name.csv  csv_names.cpp  make_csv_names.ipynb
src/: CMakeLists.txt  main.cpp  utest_main.cpp
src/android/: Application_jni.cpp  Application_jni.h  CMakeLists.txt  DialogAndroid.cpp  DialogAndroid.h  SurfaceAndroid.cpp  SurfaceAndroid.h  kwui_jni.cpp  kwui_jni.h
src/api/: CMakeLists.txt  kwui.h  kwui_capi.h  kwui_jni.cpp  kwui_jni.h
src/api/kwui/: Application.cpp  Application.h  Application_capi.cpp  Application_capi.h  Application_jni.cpp  Application_jni.h  Application_private.h  ButtonState.h  CustomElement.h  CustomElementPaint.cpp  CustomElementPaint.h  CustomElementPaint_private.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEngine_capi.cpp  ScriptEngine_capi.h  ScriptValue.cpp  ScriptValue.h  ScriptValue_capi.cpp  ScriptValue_capi.h  VKey.h  kwui_export.h  kwui_main.h
src/base/: CMakeLists.txt  EncodingManager.cpp  EncodingManager.h  Object.h  PEG.h  ResourceAndroid.cpp  ResourceAndroid.h  ResourceArchive.cpp  ResourceArchive.h  ResourceManager.cpp  ResourceManager.h  ResourceProviderInterface.h  TaskQueue.cpp  TaskQueue.h  WeakObject.h  base-Object.ixx  base-peg.ixx  base-string_intern.ixx  base.h  base.ixx  log.cpp  log.h  scoped_setter.h  string_intern.h
src/base/algorithm/: lzf.cpp  lzf.h
src/graph2d/: Bitmap.h  CMakeLists.txt  PaintBrush.cpp  PaintBrush.h  PaintContextInterface.cpp  PaintContextInterface.h  PaintPathInterface.h  PaintSurface.h  Painter.h  TextLayout.h  fast_blur.c  fast_blur.cpp  fast_blur.h  graph2d.cpp  graph2d.h  image_blur.cpp  image_blur.h
src/jsc/: CMakeLists.txt  Keact.mjs  app.d.ts  jsc.cpp  jsc.h
src/resources/: CMakeLists.txt  resources.cpp  resources.h
src/scene2d/: Actor.cpp  Actor.h  Attribute.h  BoxConstraintSolver.cpp  BoxConstraintSolver.h  ButtonControl.cpp  ButtonControl.h  CMakeLists.txt  Control.cpp  Control.h  CustomElementControl.cpp  CustomElementControl.h  Event.h  ImageControl.cpp  ImageControl.h  KmlControl.cpp  KmlControl.h  Layout.cpp  Layout.h  LineEditControl.cpp  LineEditControl.h  NativeViewControl.cpp  NativeViewControl.h  Node.cpp  Node.h  ProgressBarControl.cpp  ProgressBarControl.h  Scene.cpp  Scene.h  ScrollBarControl.cpp  ScrollBarControl.h  SpinnerControl.cpp  SpinnerControl.h  Stage.cpp  Stage.h  TextLayout.cpp  TextLayout.h  WidthSolver.cpp  WidthSolver.h  geom_types.h  (+4 more)
src/script/: CMakeLists.txt  ComponentState.cpp  ComponentState.h  ContextId.cpp  ContextId.h  Dialog.h  ElementRef.cpp  ElementRef.h  EventPort.cpp  EventPort.h  Keact.cpp  Keact.h  Value.cpp  Value.h  script.cpp  script.h  script.ixx
src/style/: BlockLayout.cpp  BlockLayout.h  BoxConstraintSolver.cpp  BoxConstraintSolver.h  CMakeLists.txt  InlineBlockLayout.cpp  InlineBlockLayout.h  InlineLayout.cpp  InlineLayout.h  Layout.cpp  Layout.h  LayoutObject.cpp  LayoutObject.h  ScrollObject.cpp  ScrollObject.h  StyleClass.h  StyleColor.cpp  StyleColor.h  StyleFont.h  StylePaint.cpp  StylePaint.h  StylePseudoClass.h  StyleRule.cpp  StyleRule.h  StyleValue.cpp  StyleValue.h  TextFlow.cpp  TextFlow.h  TextLayout.cpp  TextLayout.h  style-Color.ixx  style-Parser.ixx  style-Style.ixx  style.h  style.ixx
src/windows/: CMakeLists.txt  Dialog.cpp  Dialog.h  DialogWin32.cpp  DialogWin32.h  EncodingManager.cpp  EncodingManager.h  HiddenMsgWindow.cpp  HiddenMsgWindow.h  PopupShadow.cpp  PopupShadow.h  ResourceManager.cpp  ResourceManager.h  encoding_helpers.cpp  encoding_helpers.h  theme.cpp  theme.h  windows_header.h
src/windows/control/: ButtonControl.cpp  ButtonControl.h  CMakeLists.txt  ImageButtonControl.cpp  ImageButtonControl.h  ImageControl.cpp  ImageControl.h  LineEditControl.cpp  LineEditControl.h  ProgressBarControl.cpp  ProgressBarControl.h  SpinnerControl.cpp  SpinnerControl.h  control.h
src/windows/control_backup/: CMakeLists.txt  LineEditControl.cpp  LineEditControl.h
src/windows/graphics/: CMakeLists.txt  Color.cpp  Color.h  CustomFont.cpp  CustomFont.h  FlowLayout.cpp  FlowLayout.h  FlowSink.cpp  FlowSink.h  FlowSource.cpp  FlowSource.h  GraphicDevice.cpp  GraphicDevice.h  GraphicDeviceD2D.cpp  GraphicDeviceD2D.h  PaintSurfaceD2D.cpp  PaintSurfaceD2D.h  Painter.cpp  Painter.h  PainterD2D.cpp  PainterD2D.h  TextAnalysis.cpp  TextAnalysis.h  TextAnalysisOld.cpp  TextAnalysisOld.h  TextFlow.cpp  TextFlow.h  TextFlowD2D.cpp  TextFlowD2D.h  TextLayout.cpp  TextLayout.h  TextLayoutD2D.cpp  TextLayoutD2D.h
src/xskia/: BitmapX.cpp  BitmapX.h  CMakeLists.txt  GLStateSaver.cpp  GLStateSaver.h  GLWindowContextXWin32.cpp  GLWindowContextXWin32.h  GraphicDeviceX.cpp  GraphicDeviceX.h  NativeGLStateX.cpp  NativeGLStateX.h  PaintPathX.cpp  PaintPathX.h  PaintSurfaceX.cpp  PaintSurfaceX.h  PainterX.cpp  PainterX.h  TextFlowX.cpp  TextFlowX.h  TextLayoutX.cpp  TextLayoutX.h  xskia.h
tests/: CMakeLists.txt
tests/overflow/: CMakeLists.txt  overflow.cpp
tests/overflow/assets/: entry.mjs  overflow.mjs
(+113 files in other folders)
