if(ANDROID)
    apk_add_executable(test_overflow)
else()
    add_executable(test_overflow)
endif()
target_sources(test_overflow PRIVATE overflow.cpp)
if(WIN32)
    target_sources(test_overflow PRIVATE dpi-aware.manifest)
endif()
target_include_directories(test_overflow PRIVATE ${CMAKE_SOURCE_DIR}/src/api)
target_link_libraries(test_overflow kwui_static)
